tests/miniJava/neg/005260_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] public int [] java ( ) { return 0 ; } java ( ) { return 0 ; } }
